tests/baselines/reference/iteratorSpreadInArray10.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray10.ts(1,17): error TS2489: An iterator must have a 'next()' method.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray10.ts (1 errors) ====
    var array = [...new SymbolIterator];
                    ~~~~~~~~~~~~~~~~~~
!!! error TS2489: An iterator must have a 'next()' method.
    
    class SymbolIterator {
        [Symbol.iterator]() {
            return this;
        }
    }